# Autodict

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/hooks/: session-start.sh
.claude/skills/build-app/: SKILL.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/autodict/: AutodictApp.kt  MainActivity.kt
app/src/main/java/com/autodict/data/audio/: AudioRecorder.kt  WavWriter.kt
app/src/main/java/com/autodict/data/diary/: DiaryRepository.kt
app/src/main/java/com/autodict/data/index/: IndexReconciler.kt  IndexStore.kt  IndexedEntry.kt
app/src/main/java/com/autodict/data/markdown/: FrontmatterSerializer.kt
app/src/main/java/com/autodict/data/storage/: AppSettings.kt  SafRepository.kt  StoragePaths.kt
app/src/main/java/com/autodict/data/transcribe/: ModelDownloader.kt  WhisperJni.kt  WhisperModel.kt
app/src/main/java/com/autodict/domain/model/: DiaryEntry.kt
app/src/main/java/com/autodict/ui/detail/: EntryDetailScreen.kt  EntryDetailViewModel.kt
app/src/main/java/com/autodict/ui/edit/: EntryEditScreen.kt  EntryEditViewModel.kt
app/src/main/java/com/autodict/ui/list/: EntryListScreen.kt  EntryListViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
(+15 files in other folders)
